# cbre

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  WORKFLOW.md  analyze_optimization.py  pyproject.toml  requirements.txt  test_enhanced_feedback.py
configs/: fields_config.yaml  inference_config.yaml  lease_mapping_config.json
prompts/: system_prompt.txt
prompts/export_17.11/: actual_lease_start_date.json  billing_address.json  billing_city.json  billing_phone.json  billing_state.json  billing_zip_code.json  cpi_adjustments_required.json  deposit_required.json  exclusive_use_article_paragraph.json  exclusive_use_description.json  expiration_date.json  first_occupied.json  guaranty.json  holdover_article_paragraph.json  holdover_description.json  insurance_required.json  late_fees_calculation_method.json  lease_commence.json  lessee_name.json  letter_of_credit_or_lease_bond.json  opx_lease_type.json  percentage_rent_required.json  premise_address.json  premise_city.json  premise_state.json  prepaid_rent_required.json  property_name.json  relocation_article_paragraph.json  rent_due_day.json  (+4 more)
results/: evaluation.csv  summary.txt
scripts/: __init__.py  constants.py  evaluate_predictions.py  example_script.py  export_optimized_prompts.py  extract_lease_ground_truth.py  gen_data.py  generate_comparison_csvs.py  json_metrics.py  matchers.py  optimize_fields.py  run_inference.py
tests/: __init__.py  test_export_optimized_prompts.py  test_extraction_fields.py  test_json_path_resolver.py  test_matchers.py  test_shared.py
(+44 files in other folders)
